--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ndn-lite"]
 	path = ndn-lite
 	url = https://github.com/named-data-iot/ndn-lite.git
+[submodule "ndn-riot-tests"]
+  path = ndn-riot-tests
+  url = https://github.com/Zhiyi-Zhang/ndn-riot-tests.git
