--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,20 @@
 # Root CMake file for NDN-Lite over POSIX
 cmake_minimum_required (VERSION 3.13)
 project(ndn-lite)
+
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall -O0 -ggdb")
 set(CMAKE_C_FLAGS_DEBUG "-O0 -g")
 set(CMAKE_C_FLAGS_RELEASE "-O3")
+
+set(DIR_CMAKEFILES "${PROJECT_SOURCE_DIR}/CMakeInputs")
+set(DIR_NDN_LITE "${PROJECT_SOURCE_DIR}/ndn-lite")
+include_directories(${PROJECT_SOURCE_DIR})
+set(FAKE_RIOT_HEADER "${PROJECT_SOURCE_DIR}/fake-riot-header")
+
 add_library(ndn-lite STATIC)
-include(CMakeFiles/ndnlite.cmake)
+include(${DIR_CMAKEFILES}/ndnlite.cmake)
+
+add_executable(unittest)
+target_link_libraries(unittest ndn-lite)
+target_include_directories(unittest PRIVATE ${FAKE_RIOT_HEADER})
+include(${DIR_CMAKEFILES}/unittest.cmake)
