--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,21 +22,24 @@ include(${DIR_CMAKEFILES}/unittest.cmake)
 # Doxygen
 # first we can indicate the documentation build as an option and set it to ON by default
 option(BUILD_DOCS "Build documentation" OFF)
-find_package(Doxygen)
+find_package(Doxygen
+  OPTIONAL_COMPONENTS dot
+)
 if (DOXYGEN_FOUND AND BUILD_DOCS)
-    # set input and output files
-    set(DOXYGEN_IN ${PROJECT_SOURCE_DIR}/docs/Doxyfile)
-    set(DOXYGEN_OUT ${PROJECT_BINARY_DIR}/Doxyfile)
-
-    # request to configure the file
-    configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
-
-    # note the option ALL which allows to build the docs together with the application
-    add_custom_target( docs ALL
-        COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
-        WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
-        COMMENT "Generating API documentation with Doxygen"
-        VERBATIM )
+  set(DOXYGEN_PROJECT_LOGO ${PROJECT_SOURCE_DIR}/docs/logo.jpeg)
+  set(DOXYGEN_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/docs)
+  set(DOXYGEN_TAB_SIZE 2)
+  set(DOXYGEN_OPTIMIZE_OUTPUT_FOR_C YES)
+  set(DOXYGEN_EXTRACT_ALL YES)
+  set(DOXYGEN_INCLUDE_GRAPH NO)
+  set(DOXYGEN_INCLUDED_BY_GRAPH NO)
+  set(DOXYGEN_UML_LOOK YES)
+  set(DOXYGEN_UML_LIMIT_NUM_FIELDS 3)
+  doxygen_add_docs(docs
+    ${PROJECT_SOURCE_DIR}/docs
+    ${PROJECT_SOURCE_DIR}/ndn-lite
+    COMMENT "Generating API documentation with Doxygen"
+  )
 else ()
   message("Documentation skipped")
 endif ()
