doc: Fix some documentations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ if (DOXYGEN_FOUND AND BUILD_DOCS)
   set(DOXYGEN_INCLUDED_BY_GRAPH NO)
   set(DOXYGEN_UML_LOOK YES)
   set(DOXYGEN_UML_LIMIT_NUM_FIELDS 3)
+  set(DOXYGEN_JAVADOC_AUTOBRIEF YES)
   doxygen_add_docs(docs
     ${PROJECT_SOURCE_DIR}/docs
     ${PROJECT_SOURCE_DIR}/ndn-lite
