--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_C_FLAGS_RELEASE "-O3")
 set(DIR_CMAKEFILES "${PROJECT_SOURCE_DIR}/CMakeInputs")
 set(DIR_NDN_LITE "${PROJECT_SOURCE_DIR}/ndn-lite")
 set(DIR_ADAPTATION "${PROJECT_SOURCE_DIR}/adaptation")
+set(DIR_EXAMPLES "${PROJECT_SOURCE_DIR}/examples")
 include_directories(${PROJECT_SOURCE_DIR})
 
 # NDN-Lite static library
@@ -22,6 +23,9 @@ include(${DIR_CMAKEFILES}/adaptation.cmake)
 add_executable(unittest)
 target_link_libraries(unittest ndn-lite)
 include(${DIR_CMAKEFILES}/unittest.cmake)
+
+# Examples
+include(${DIR_CMAKEFILES}/examples.cmake)
 
 # Doxygen
 # first we can indicate the documentation build as an option and set it to ON by default
