cmake: Add LIBRARY DESTINATION

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,4 +122,5 @@ install(FILES "${PROJECT_SOURCE_DIR}/ndn-lite.h"
 )
 install(TARGETS ndn-lite
         ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
+        LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
 )
