--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ndn-riot-tests"]
   path = ndn-riot-tests
   url = https://github.com/named-data-iot/ndn-riot-tests.git
+[submodule "ndn-lite-tests"]
+	path = ndn-lite-tests
+	url = https://github.com/named-data-iot/ndn-lite-tests
