--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 dist: bionic
 language: c
 compiler: gcc
+before_install:
+  - sudo apt-get update
+  - sudo apt install -y libcunit1 cmake
 script:
-  - mkdir build && cd build
-  - cmake -DCMAKE_BUILD_TYPE=Release ..
+  - cd ndn-lite-tests && mkdir build && cd build
+  - cmake -DCMAKE_BUILD_TYPE=Debug ..
   - make -j2
   - ./unittest
