--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ if (NOT CMAKE_BUILD_TYPE)
 endif()
 
 add_definitions(-D_GNU_SOURCE)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Wall")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c11 -Werror -Wno-format -Wno-int-to-void-pointer-cast -Wno-int-to-pointer-cast")
 set(CMAKE_C_FLAGS_DEBUG "-O0 -ggdb")
 set(CMAKE_C_FLAGS_RELEASE "-O3")
 
@@ -70,11 +70,6 @@ endif()
 
 # Adaptation
 include(${DIR_CMAKEFILES}/adaptation.cmake)
-
-# Unit test program
-add_executable(unittest ndn-lite.h)
-target_link_libraries(unittest ndn-lite)
-include(${DIR_CMAKEFILES}/unittest.cmake)
 
 # Examples
 include(${DIR_CMAKEFILES}/examples.cmake)
